# cascades

./: .pylintrc  CHANGELOG.md  Gemfile  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
cascades/: __init__.py
cascades/_src/: __init__.py  handlers.py  handlers_test.py  interpreter.py  interpreter_test.py  sampler.py  sampler_test.py
cascades/_src/distributions/: __init__.py  base.py  base_test.py  choose.py  gpt.py  strings.py  strings_test.py
cascades/_src/inference/: __init__.py  base.py  base_test.py  beam_search.py  beam_search_test.py  dataset_sampler.py  forward_sampling.py  forward_sampling_test.py  importance_sampling.py  importance_sampling_test.py  likelihood_weighting.py  likelihood_weighting_test.py  rejection_sampling.py  rejection_sampling_test.py
cascades/examples/: calculator.py  scratchpad.py  scratchpad_test.py
cascades/examples/notebooks/: cascades_websearch_public.ipynb  trice.ipynb  websearch.ipynb
cascades/examples/tasks/: bbh.py  constitutional_rl.py  gsm8k.py  math.py  svamp.py
